--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -92,3 +92,12 @@
 // records
 .mark
 	background #f9ffbc !important;
+
+
+.stats-card
+	td:hover a
+		color #ff2882
+		box-shadow inset 0 -2px 0 0 rgba(#ff2882, .2)
+
+	tr:hover a:hover
+		box-shadow none
