--- a/views/player.pug
+++ b/views/player.pug
@@ -8,64 +8,84 @@ block content
 		header
 			h2.page-select= title
 
-		.page-filter
-			.drop-down.season
-				.drop-down_label Filter by Season
-				.drop-down_current(role="button")
-					span.value All
-					.drop-down_list
-						ul.check-list
-							li(role="option")
-								.form_checkbox-wrapper
-									input(type="checkbox", name="season", id="season_all" value="all" checked)
-									label(for="season_all") All
-							li(role="option")
-								.form_checkbox-wrapper
-									input(type="checkbox", name="season", id="season_euctfs3" value="3" disabled)
-									label(for="season_euctfs3") EU CTF S3
-							li(role="option")
-								.form_checkbox-wrapper
-									input(type="checkbox", name="season", id="season_euctfs2" value="2" disabled)
-									label(for="season_euctfs2") EU CTF S2
-							li(role="option")
-								.form_checkbox-wrapper
-									input(type="checkbox", name="season", id="season_euctfs1" value="1" disabled)
-									label(for="season_euctfs1") EU CTF S1
+		.tabs
+			.left
+				a(
+					href= '/player/' + user
+					class=(navtab == 'summary' ? 'active' : '')
+				) Summary
+				a(
+					href= '/player/' + user + '/allies'
+					class=(navtab === 'allies' ? 'active' : '')
+				) Allies
+				a(
+					href= '/player/' + user + '/opponents'
+					class=(navtab === 'opponents' ? 'active' : '')
+				) Opponents
+				a(
+					href= '/player/' + user + '/maps'
+					class=(navtab === 'maps' ? 'active' : '')
+				) Maps
 
-			.drop-down.map
-				.drop-down_label Filter by Map
-				.drop-down_current(role="button")
-					span.value All
-					.drop-down_list
-						ul.check-list
-							li(role="option" class="filter-all")
-								.form_checkbox-wrapper
-									input(type="checkbox" name="map" id="map_all" value="all" checked)
-									label(for="map_all") All
-							each raw in maps
+		if(show.filters)
+			.page-filter
+				.drop-down.season
+					.drop-down_label Filter by Season
+					.drop-down_current(role="button")
+						span.value All
+						.drop-down_list
+							ul.check-list
 								li(role="option")
 									.form_checkbox-wrapper
-										input(type="checkbox", name="map", id='map_'+raw.id, value= raw.id, disabled)
-										label(for='map_'+raw.id)= raw.name
+										input(type="checkbox", name="season", id="season_all" value="all" checked)
+										label(for="season_all") All
+								li(role="option")
+									.form_checkbox-wrapper
+										input(type="checkbox", name="season", id="season_euctfs3" value="3" disabled)
+										label(for="season_euctfs3") EU CTF S3
+								li(role="option")
+									.form_checkbox-wrapper
+										input(type="checkbox", name="season", id="season_euctfs2" value="2" disabled)
+										label(for="season_euctfs2") EU CTF S2
+								li(role="option")
+									.form_checkbox-wrapper
+										input(type="checkbox", name="season", id="season_euctfs1" value="1" disabled)
+										label(for="season_euctfs1") EU CTF S1
 
-			.drop-down.elo
-				.drop-down_label Filter by ELO
-				.drop-down_current(role="button")
-					span.value 0-3000
-					.drop-down_list(style="width:150%" class="pad")
-						p.desc Average ELO across both teams
-						#slider.slider
+				.drop-down.map
+					.drop-down_label Filter by Map
+					.drop-down_current(role="button")
+						span.value All
+						.drop-down_list
+							ul.check-list
+								li(role="option" class="filter-all")
+									.form_checkbox-wrapper
+										input(type="checkbox" name="map" id="map_all" value="all" checked)
+										label(for="map_all") All
+								each raw in maps
+									li(role="option")
+										.form_checkbox-wrapper
+											input(type="checkbox", name="map", id='map_'+raw.id, value= raw.id, disabled)
+											label(for='map_'+raw.id)= raw.name
 
-			.drop-down.game
-				.drop-down_label Filter by Games
-				.drop-down_current(role="button")
-					span.value 10
-					.drop-down_list(style="width:150%" class="pad")
-						p.desc Minimum amount of games played per player
-						#slider-game.slider
+				.drop-down.elo
+					.drop-down_label Filter by ELO
+					.drop-down_current(role="button")
+						span.value 0-3000
+						.drop-down_list(style="width:150%" class="pad")
+							p.desc Average ELO across both teams
+							#slider.slider
 
-			.filter-submit
-				button.button-secondary Apply
+				.drop-down.game
+					.drop-down_label Filter by Games
+					.drop-down_current(role="button")
+						span.value 10
+						.drop-down_list(style="width:150%" class="pad")
+							p.desc Minimum amount of games played per player
+							#slider-game.slider
+
+				.filter-submit
+					button.button-secondary Apply
 
 
 		section
