--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -95,9 +95,16 @@
 
 
 .stats-card
-	td:hover a
+	tr:hover a
 		color #ff2882
 		box-shadow inset 0 -2px 0 0 rgba(#ff2882, .2)
 
 	tr:hover a:hover
 		box-shadow none
+
+.stars
+	svg
+		display inline-block
+		height 1rem
+		width 1rem
+		vertical-align middle
