--- a/views/includes/_foot.pug
+++ b/views/includes/_foot.pug
@@ -2,5 +2,4 @@
 //- |	document.write("<script async src='https://tagpro.dev:8000/browser-sync/browser-sync-client.js?v=2.26.14'><\/script>".replace("HOST", location.hostname));
 //- | 	//]]></script>
 
-
-// |<script async defer data-domain="tagpro.dev" src="https://plausible.io/js/plausible.js"></script>
+script(src='/init.js' async)
