--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -108,3 +108,36 @@
 		height 1rem
 		width 1rem
 		vertical-align middle
+
+
+
+// player profile
+.daywrap
+	display inline-block
+	width 510px
+	padding-bottom 15px
+	font-size .8rem
+	margin-top 10px
+
+	#xaxis .domain
+		fill none
+
+	.tick
+		fill #ccc
+
+	#xaxis text
+	#yaxis text
+		font-size 12px
+		display none
+
+	#xaxis_chartOne .domain
+		display none
+
+
+.radar
+	display inline-block
+	width calc(100% - 530px)
+	margin-left 20px
+	vertical-align top
+	height 500px
+	margin-top 10px
