--- a/views/player-dash.pug
+++ b/views/player-dash.pug
@@ -261,15 +261,6 @@ block content
 										include ../src/svg/shit.svg
 										include ../src/svg/shit.svg
 
-
-		.stats-card.radar(style="display:none")
-			ul(style="display:none")
-				li.elo= radar.elo
-				li.elo= rank.mmr
-				li.cap= radar.cap
-				li.prevent= radar.prevent
-				li.hold= radar.hold
-				li.grab= radar.grab
-				li.pop= radar.pop
-				li.return= radar.return
-				li.drop= radar.drop
+		script.
+			const radar  = !{JSON.stringify(value)}
+		.radar
