--- a/views/leaderboards.pug
+++ b/views/leaderboards.pug
@@ -221,6 +221,21 @@ block content
 									)= n.player
 								td.text-r= n.pop_every
 
+			.stats-card
+				header
+					h3 Grabs Per Flaccid
+
+				table
+					tbody
+						each n, key in grabsperflaccid
+							tr(class=(key === 0 ? 'top' : ''))
+								td.rank
+									span.pos #{n.rank}.
+									a(
+										href= '/player/' + n.player
+									)= n.player
+								td.text-r= n.grabs_per_flaccid
+
 
 			.stats-card
 				header
