--- a/views/player-breakdown.pug
+++ b/views/player-breakdown.pug
@@ -32,6 +32,10 @@ block content
 					href= '/player/' + user + '/breakdown'
 					class=(navtab === 'breakdown' ? 'active' : '')
 				) Breakdown
+				a(
+					href= '/player/' + user + '/seasons'
+					class=(navtab === 'seasons' ? 'active' : '')
+				) Seasons
 
 		//winloss
 		script.
