--- a/views/player.pug
+++ b/views/player.pug
@@ -30,6 +30,10 @@ block content
 					href= '/player/' + user + '/breakdown'
 					class=(navtab === 'breakdown' ? 'active' : '')
 				) Breakdown
+				a(
+					href= '/player/' + user + '/seasons'
+					class=(navtab === 'seasons' ? 'active' : '')
+				) Seasons
 
 		if(show.filters)
 			.page-filter
