--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -192,7 +192,15 @@
 						// color: #ff2882;
 
 					.pos
-						display none
+						font-weight 700
+
+						&.high
+							color #1dbf38
+						&.avg
+							color #8da034
+							color #a9b132
+
+
 
 		.block_right
 			display inline-block
