--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -155,17 +155,20 @@
 		border-bottom 1px solid #e8e8e8
 
 	.season
-		padding 1rem 0
 		min-height 350px
 
 		h1
 			font-size 1.1rem
-			margin 0
 
 		.block_left
 			display inline-block
-			width 70%
+			width 30%
 			vertical-align top
+
+			.title
+				font-size 1rem
+				font-weight 700
+				padding 0 0 0.5rem 0
 
 			ul.stats
 				display block
@@ -174,32 +177,30 @@
 				margin-bottom 1.5rem
 
 				li
-					display inline-block
-					width 7rem
+					display block
+					width 10rem
+					padding .2rem 0
+					font-size .9rem
+
+					&:not(:last-child)
+						border-bottom: 1px solid #f9f9f9;
 
 					.lab
-						display block
-						font-size: .9rem;
+						display inline-block
 						color: #6c6c6c;
-
-					.val
-						font-size 1.4rem
-						border-radius: 10px;
-						display: inline-block;
-						margin-top: .25rem;
-						// padding: .4rem .5rem
-						// background: #fff3f5;
-						// color: #ff2882;
+						width 40%
 
 					.pos
-						font-weight 700
+						width 50%
+						display: inline-block;
+						text-align right
 
 						&.high
 							color #1dbf38
+							font-weight 700
 						&.avg
-							color #8da034
 							color #a9b132
-
+							font-weight 700
 
 
 		.block_right
@@ -207,6 +208,7 @@
 			width 30%
 			min-width 300px
 			vertical-align top
+			text-align center
 
 		.radar
 			display inline-block
