--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -225,3 +225,64 @@
 
 			.season3
 				stroke rgba(blue, .75)
+
+
+
+.search
+	height 3rem
+	margin-bottom 1.6rem
+
+	input
+		background rgba(black, .73)
+		background #1c031f
+		padding 1rem
+		color white
+		width 70%
+		border-radius 10px 0 0 10px
+		height inherit
+		font-size 1rem
+		vertical-align top
+
+		&::placeholder
+			color rgba(white, .5)
+
+		&:focus
+			outline none
+
+	button
+		vertical-align top
+		width 20%
+		display inline-block
+		border none
+		background linear-gradient(to top, #3351db, #1199f3)
+		border-radius 0 10px 10px 0
+		cursor pointer
+		height inherit
+
+		svg
+			fill white
+			height 1rem
+
+.searchresults
+	a
+		padding: 2rem;
+		display: inline-block;
+		width: 200px;
+		background: rgba(#eee, .5);
+		border: 1px solid rgba(#ccc, .5);
+		border-radius: 6px;
+		cursor: pointer;
+		margin-right 1rem
+		margin-bottom 1rem
+		text-align center
+
+		em
+			font-style normal
+			color #ff2882
+			box-shadow inset 0 -2px 0 0 rgba(#ff2882, .2)
+
+		&:hover
+			background #fef7ff
+
+			em
+				box-shadow none
