--- a/src/css/custom/layout.styl
+++ b/src/css/custom/layout.styl
@@ -14,11 +14,9 @@ body
 
 	.header_bar
 		background $primary-color
-		padding: .5rem 2rem
+		padding: .5rem 0
 		color white
-		text-align right
 		font-size: .9rem;
-		font-style: italic;
 		display: flex;
 		align-items: center;
 		justify-content: flex-end;
