--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -71,24 +71,6 @@
 	tr:hover a:hover
 		box-shadow none
 
-.tidbits
-	position fixed
-	bottom 1rem
-	left 1rem
-	font-size .9rem
-
-	span
-		color white
-		padding-right .3rem
-
-	a
-		color white
-		box-shadow inset 0 -2px 0 0 rgba(white, .2)
-		margin-right 1rem
-
-		&:hover
-			box-shadow none
-
 // records
 .mark
 	background #f9ffbc !important;
@@ -148,8 +130,20 @@
 
 .byseason
 	.filter
-		text-align right
 		display block
+		text-align right
+
+		label
+			cursor pointer
+
+			span
+				font-weight 300
+				display inline-block
+				margin-left .25rem
+
+
+
+
 
 	.season:not(:last-child)
 		border-bottom 1px solid #e8e8e8
@@ -229,16 +223,22 @@
 
 
 .search
-	height 3rem
-	margin-bottom 1.6rem
+	height 34px
+	width 20rem
+	display block
+	top 0
+	right 0
+	position absolute
 
 	input
 		background rgba(black, .73)
 		background #1c031f
+		// background white
 		padding 1rem
 		color white
-		width 70%
-		border-radius 10px 0 0 10px
+		// color #363636
+		width 80%
+		// border-radius 10px 0 0 10px
 		height inherit
 		font-size 1rem
 		vertical-align top
@@ -254,8 +254,8 @@
 		width 20%
 		display inline-block
 		border none
-		background linear-gradient(to top, #3351db, #1199f3)
-		border-radius 0 10px 10px 0
+		background linear-gradient(to right bottom,#2999f5,#1859d1)
+		// border-radius 0 10px 10px 0
 		cursor pointer
 		height inherit
 
@@ -286,3 +286,34 @@
 
 			em
 				box-shadow none
+
+.last-updated
+	a
+		width 7rem
+		text-align center
+		padding 1rem
+		font-weight bold
+		color white
+
+		&.active
+			color #363636
+			background #eaff04
+
+.modes
+	position absolute
+	left 250px
+	height 34px
+
+	a
+		display inline-block
+		width 7rem
+		text-align center
+		padding .5rem
+		font-weight bold
+		color white
+		box-sizing border-box
+		height inherit
+
+		&.active
+			background #eaff04
+			color #37003c
