--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -317,3 +317,12 @@
 		&.active
 			background #eaff04
 			color #37003c
+
+.summary
+	.highlight-good
+		background #dfffe3
+		color #11930a
+
+	.highlight-bad
+		background #ffdfdf
+		color #c34e4e
