--- a/views/includes/_foot.pug
+++ b/views/includes/_foot.pug
@@ -2,6 +2,6 @@
 //- |	document.write("<script async src='https://tagpro.dev:8000/browser-sync/browser-sync-client.js?v=2.26.14'><\/script>".replace("HOST", location.hostname));
 //- | 	//]]></script>
 
-| <script type="text/javascript" src="https://api.pirsch.io/pirsch.js" id="pirschjs" data-code="B4go48CFND4FKirpyjLwOfFCPXG9cFdd"></script>
+// | <script type="text/javascript" src="https://api.pirsch.io/pirsch.js" id="pirschjs" data-code="B4go48CFND4FKirpyjLwOfFCPXG9cFdd"></script>
 
 script(src='/init.js' async)
