--- a/views/player-dash.pug
+++ b/views/player-dash.pug
@@ -263,3 +263,42 @@ block content
 										include ../src/svg/shit.svg
 										include ../src/svg/shit.svg
 										include ../src/svg/shit.svg
+
+
+		br
+
+		section.summary
+			table.table-sticky
+				thead
+					each raw in monthly
+						- function th(string){ return string.replace(/(?:_| |\b)(\w)/g, function($1){return $1.toUpperCase().replace('_',' ')})}
+
+						tr
+							- let n = 0
+							- let last = Object.keys(raw).length
+							each v, k in raw
+								-- ++n
+								if(k === 'dates')
+									- continue
+								else if(k === 'monthyear')
+									th.text-c.sort(style="width:100px")
+
+								else
+									if(last === n)
+										th.text-c.sort.sort-desc
+											span= th(k)
+									else
+										th.text-c.sort
+											span= th(k)
+							- break
+
+				tbody
+					each raw in monthly
+						tr
+							each v, k in raw
+								if(k === 'dates')
+									- continue
+								else if(k === 'monthyear')
+									td.text-l= v
+								else
+									td.text-c= v
